--- a/chat_exporter/html/component/component_button.html
+++ b/chat_exporter/html/component/component_button.html
@@ -1,5 +1,5 @@
 <div class="chatlog__component-button {{DISABLED}}" style=background-color:{{STYLE}}>
-    <a href="{{URL}}" style=text-decoration:none>
+   <a href="{{URL}}" style=text-decoration:none{{TARGET}}>
     <span class="chatlog__button-label">{{EMOJI}}{{LABEL}}{{ICON}}</span>
     </a>
 </div>
